VideoMediaSampleRenderer do not display decoded frames created by VideoDecoder https://bugs.webkit.org/show_bug.cgi?id=283677 rdar://140538938

Reviewed by NOBODY (OOPS!).

Do not use CMSampleBuffer's duration to determine when to schedule the next frame for display or to purge
the decoded queue from late frames.
The decoded sample returned by WebCodec's VideoDecoder all have a duration set to 0.
Their presentation time is equal to their presentation end time.
When we scheduled the task to purge old frames, it would then attempt to display the earliest frame which would either always be
- too late
- not ready for display yet.

In this change, we now always assume a decoded frame is to be displayed until the next one is available; we ignore
the duration set in the decoded queue's CMSampleBuffer and instead always use the start time of the next frame
to determine the duration of the previous one.

Covered by existing tests and further tests enabled in a follow-up change (webkit.org/b/282163)

* Source/WebCore/PAL/pal/cf/CoreMediaSoftLink.cpp:
* Source/WebCore/PAL/pal/cf/CoreMediaSoftLink.h: Add soft-link to CMBufferQueueCallForEachBuffer.
* Source/WebCore/platform/graphics/cocoa/VideoMediaSampleRenderer.h: The timebase and TimerSource should only ever be
accessed atomically together. Change the type to better reflect this by using a std::pair to store both.
* Source/WebCore/platform/graphics/cocoa/VideoMediaSampleRenderer.mm:
(WebCore::VideoMediaSampleRenderer::nextDecodedSample const): code was used in multiple place. Move it to a dedicated function.
(WebCore::sampleCallback):
(WebCore::VideoMediaSampleRenderer::nextDecodedSampleEndTime const): Add method that interates the CMBufferQueue
and stops after the 2nd frame.
(WebCore::VideoMediaSampleRenderer::enqueueDecodedSample):
(WebCore::VideoMediaSampleRenderer::setTimebase):
(WebCore::VideoMediaSampleRenderer::clearTimebase):
(WebCore::VideoMediaSampleRenderer::timebaseAndTimerSource const):
(WebCore::VideoMediaSampleRenderer::timebase const):
(WebCore::VideoMediaSampleRenderer::decodedFrameAvailable):
(WebCore::VideoMediaSampleRenderer::maybeQueueFrameForDisplay):
(WebCore::VideoMediaSampleRenderer::cancelTimer):
(WebCore::VideoMediaSampleRenderer::purgeDecodedSampleQueue):
(WebCore::VideoMediaSampleRenderer::maybeReschedulePurge):
(WebCore::VideoMediaSampleRenderer::copyDisplayedPixelBuffer):